--- a/Calendar_Application/Calendar/templates/Calendar/index.html
+++ b/Calendar_Application/Calendar/templates/Calendar/index.html
@@ -72,6 +72,6 @@
                 </div>
             </div>
     </div>
-    <script src="{% static 'calendar.js' %}"></script>
+    <script src="{% static 'calendar.js' %}" data-event-list="{{ event_list }}"></script>
 </body>
 </html>
