--- a/Calendar_Application/Calendar/static/calendar.css
+++ b/Calendar_Application/Calendar/static/calendar.css
@@ -61,7 +61,17 @@ button {
     transition: all 0.3s;
 }
 
-button:hover {
+p {
+    border-radius: 4px;
+    padding: 2px;
+    margin: 5px;
+    font-size: 1.5em;
+    display: block;
+    background-color: darkgray;
+    transition: all 0.3s;
+}
+
+p:hover {
     background-color: rgb(120, 120, 120);
     transform: scale(1.05);
 }
