--- a/Calendar_Application/Calendar/templates/Calendar/index.html
+++ b/Calendar_Application/Calendar/templates/Calendar/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="calendar-grid">
             <div class="day">
-                <div class="day-name">Sun</div>
+                <div class="day-name">Sun {{ first }}</div>
                 <div class="calendar-day">
                     {% for event in event_list.0 %}
                         <p>{{ event }}</p>
