--- a/Calendar_Application/Calendar/static/calendar.css
+++ b/Calendar_Application/Calendar/static/calendar.css
@@ -8,14 +8,18 @@ body {
     margin: 0;
     padding: 0;
 
-
     background-image: url("/static/IMG_8913.JPG");
+    /*background-image: url("/static/sunnyocean4k.png");*/
+    
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 
-    color: #FFF;
+    /* Background blur */
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
 
+    color: #FFF;
 }
 
 p {
@@ -122,6 +126,10 @@ button:hover {
     transition: all 0.3s;
 }
 
+.event[data-color] {
+    background-color: var(--event-color, #FF0000);
+}
+
 .event:hover {
     background-color: rgb(120, 120, 120);
     transform: scale(1.03);
@@ -154,6 +162,8 @@ button:hover {
     width: 100%;
     position: relative;
     color: black;
+    overflow: wrap;
+    word-wrap: break-word;
 }
 
 .close-btn {
