--- a/Calendar_Application/Calendar/templates/Calendar/index.html
+++ b/Calendar_Application/Calendar/templates/Calendar/index.html
@@ -11,7 +11,7 @@
     <div class="calendar">
         <div class="calendar-header">
             <button id="prev" aria-label="Previous">Prev</button>
-            <h2 id="heading" data-view="{{ view }}" data-current-date="{{ event_list.0.date }}">{{ event_list.0.date }}</h2>
+            <h2 id="heading" data-view="{{ view }}" data-current-date="{{ first_day_of_view }}">{{ title_text }}</h2>
             <button id="next" aria-label="Next">Next</button>
         </div>
 
