--- a/Calendar_Application/Calendar/static/calendar.css
+++ b/Calendar_Application/Calendar/static/calendar.css
@@ -18,7 +18,6 @@ body {
     /* Background blur */
     -webkit-backdrop-filter: blur(8px);
     backdrop-filter: blur(8px);
-
     color: #FFF;
 }
 
@@ -31,16 +30,15 @@ p {
     margin: 0 auto;
     padding: 20px;
     margin: 20px;
-    
-    
     background: rgba(75, 75, 75, 0.3);
     -webkit-backdrop-filter: blur(15px);
     backdrop-filter: blur(15px);
-    
-    
     border-radius: 12px;
     overflow: hidden;
     /*Fix height*/
+    
+    
+    animation: load 0.5s ease-out;
 }
 
 .calendar-header {
@@ -74,7 +72,8 @@ p {
     padding: 10px;
     overflow: hidden; 
     white-space: nowrap;
-    text-overflow: ellipsis;    
+    text-overflow: ellipsis;
+    color: black;
 }
 
 .calendar-day {
@@ -149,22 +148,34 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.5);
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    
     overflow-y: auto;
 }
 
 .modal-content {
+    animation: fadeScale 0.3s ease-out;
     background-color: #fff;
     margin: auto;
     padding: 20px;
     border-radius: 8px;
-    max-width: 500px;
-    width: 100%;
+    
+    width: 50%;
     position: relative;
     color: black;
-    overflow: wrap;
-    word-wrap: break-word;
+
+    overflow-y: auto; /* Enables vertical scrolling when content overflows */
+    overflow-x: hidden; /* Prevents horizontal scrolling */
+    word-wrap: break-word; /* Breaks long words to prevent horizontal overflow */
+
+    max-height: 90vh; /* Ensures the modal doesn't exceed 90% of the viewport height */
+
 }
+@media screen and (max-width: 600px) {
+    .modal-content {
+        width: 90%;
+    }    
+}
+
 
 .close-btn {
     color: #aaa;
@@ -180,4 +191,28 @@ button:hover {
 .close-btn:hover,
 .close-btn:focus {
     color: #333;
+}
+
+
+@keyframes fadeScale {
+    0% {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+@keyframes load {
+    0% {
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
