--- a/Calendar_Application/Calendar/templates/Calendar/index.html
+++ b/Calendar_Application/Calendar/templates/Calendar/index.html
@@ -19,11 +19,11 @@
         <div class="calendar-grid">
             {% for day in event_list %}
                 <div class="day">
-                    <div class="day-name">{{ day.weekday }} <i>({{ day.date }})</i></div>
+                    <div class="day-name"><a href="d">{{ day.weekday }} <i>({{ day.date }})</i></a></div>
                     <div class="calendar-day">
                         {% for event in day.events %}
                             <p class="event" data-event-id="{{ event.id }}" style="background-color: {{ event.event_color }};">
-                                <b>{{ event.event_name }}</b>
+                                <b>{{ event.event_name }}</b><br><i>{{ event.event_start_time }} - {{ event.event_end_time }}</i>
                             </p>
                         {% empty %}
                             <p><i>No events</i></p>
@@ -41,6 +41,10 @@
             <h2 id="event-name"></h2>
             <p><strong>Date:</strong> <span id="event-date"></span></p>
             <p><strong>Description:</strong> <span id="event-description"></span></p>
+            <p><strong>Start Time:</strong> <span id="event-start-time"></span></p>
+            <p><strong>End Time:</strong> <span id="event-end-time"></span></p>
+            <p><strong>Location:</strong> <span id="event-location"></span></p>
+            <p><strong>Color:</strong> <span id="event-color"></span></p>
         </div>
     </div>
 
