--- a/Calendar_Application/Calendar/templates/Calendar/index.html
+++ b/Calendar_Application/Calendar/templates/Calendar/index.html
@@ -75,6 +75,7 @@
                     <option value="#7209B7">Purple</option>
                     <option value="#A01A7D">Magenta</option>
                 </select>
+                <button type="submit">Add Event</button>
             </form>
         </div>
     </div>
