--- a/Calendar_Application/Calendar/templates/Calendar/day.html
+++ b/Calendar_Application/Calendar/templates/Calendar/day.html
@@ -6,6 +6,51 @@
     <title>Day</title>
 </head>
 <body>
-    <h1>day</h1>
+    <!-- Event Modal -->
+    <div id="event-modal" class="modal" role="dialog" aria-modal="true">
+        <div class="modal-content">
+            <button class="close-event-btn" aria-label="Close">&times;</button>
+            <h2>Events</h2>
+            <div id="event-list"></div>
+            <button id="add-event-btn">Add Event</button>
+        </div>
+    </div>
+
+    <!-- Add Event Modal -->
+    <div id="add-event-modal" class="modal" role="dialog" aria-modal="true">
+        <div class="modal-content">
+            <button class="close-add-event-btn" aria-label="Close">&times;</button>
+            <h2>Add Event</h2>
+            <form id="add-event-form">
+                {% csrf_token %}
+                <label>Event Name:</label>
+                <input type="text" id="event-name" name="event_name" required>
+                <label>Date:</label>
+                <input type="date" id="event-date" name="event_date" required>
+                <label>Start Time:</label>
+                <input type="time" id="event-start-time" name="start_time" required>
+                <label>End Time:</label>
+                <input type="time" id="event-end-time" name="end_time" required>
+                <label>Description:</label>
+                <input id="event-description" name="description"></input>
+                <label>Location:</label>
+                <input type="text" id="event-location" name="place">
+                <label>Color:</label>
+                <select id="event-color" name="event_color">
+                    <option value="#f2002b" data-color="#f2002b">Red</option>
+                    <option value="#F64021" data-color="#F64021">Red-Orange</option>
+                    <option value="#F98016" data-color="#F98016">Orange</option>
+                    <option value="#FCC00B" data-color="#FCC00B">Orange-Yellow</option>
+                    <option value="#FFFF00" data-color="#FFFF00">Yellow</option>
+                    <option value="#00CC66" data-color="#00CC66">Green</option>
+                    <option value="#496DDB" data-color="#496DDB">Blue</option>
+                    <option value="#7209B7" data-color="#7209B7">Purple</option>
+                    <option value="#A01A7D" data-color="#A01A7D">Magenta</option>
+                </select>
+                <button type="submit">Add Event</button>
+            </form>
+        </div>
+    </div>
+    <script src="{% static 'day.js' %}"></script>
 </body>
 </html>
