--- a/Calendar_Application/Calendar/templates/Calendar/index.html
+++ b/Calendar_Application/Calendar/templates/Calendar/index.html
@@ -9,19 +9,16 @@
 </head>
 <body>
     <div class="find">
-        <form id="find" method="post">
-            {% csrf_token %}
-            <label for="date">Go to date:</label>
-            <input type="date" id="date" name="date" required>
-            <label for="views">View:</label>
-            <select name="views" id="views">
-                <option value="year">Year</option>
-                <option value="month">Month</option>
-                <option value="week">Week</option>
-                <option value="day">Day</option>
-              </select>
-            <button type="submit">Find</button>
-        </form>
+        <label for="date">Go to date:</label>
+        <input type="date" id="find-date" name="date" required>
+        <label for="views">View:</label>
+        <select name="views" id="views">
+            <option value="year">Year</option>
+            <option value="month">Month</option>
+            <option value="week">Week</option>
+            <option value="day">Day</option>
+            </select>
+        <button id="find">Find</button>
     </div>
     <br>
     <div class="calendar">
