--- a/Calendar_Application/Calendar/templates/Calendar/day.html
+++ b/Calendar_Application/Calendar/templates/Calendar/day.html
@@ -51,7 +51,9 @@
         <div class="modal-content">
             <button class="close-event-btn" aria-label="Close">&times;</button>
             <h2>Events</h2>
+            <hr id="line">
             <div id="event-list"></div>
+            <hr id="line">
             <button id="add-event-btn">Add Event</button>
         </div>
     </div>
